--- a/styles/style.css
+++ b/styles/style.css
@@ -1,3 +1,6 @@
+* {
+    font-family:Arial, Helvetica, sans-serif;
+}
 .header {
     background-color: #1F2937;
 }
@@ -8,9 +11,10 @@
     padding: 10px 50px;
 }
 
-.header-bar-logo {
-    color: #F9FAF8;
-    font-size: 24px;
+.header-bar-logo img {
+    height: 70px;
+    width: 70px;
+    margin-top: 20px;
 }
 
 .header-bar-right {
@@ -18,12 +22,26 @@
     gap: 10px;
 }
 
+.header-bar-right img {
+    width: 20px;
+    height: 20px;
+}
 .header-second {
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
     padding: 30px 50px;
     color: #E5E7EB;
     font-size: 18px;
+}
+
+.header-second-info-welcome {   
+    font-size: 48px;
+    font-weight: bold;
+    color: #F9FAF8;
+
+}
+#header-btn {
+    margin-top: 20px;
 }
 
 a {
@@ -38,8 +56,44 @@ a {
 }
 
 #header-img {
-    width: 500px;
-    height: 350px;
+    width: 650px;
+    height: 400px;
+    border: #F9FAF8 solid 2px;
+    border-radius: 10px;
+}
+
+.card img {
+    width: 300px;
+    height: 300px;
+    border: #3882F6 solid;
+    border-radius: 10px;
+}
+
+.cards {
+    display: flex;
+    gap: 20px;
+    padding: 30px 60px 80px 60px;
+    justify-content: space-around;
+}
+
+.info {
+    display: flex;
+    flex-direction: column;
+    padding: 30px ;
+}
+
+.info-header {
+    align-self: center;
+    font-size: 36px;
+    font-weight: bold;
+    color: #1F2937;
+}
+
+.card {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 10px;
 }
 
 .quote-bg {
@@ -54,22 +108,21 @@ a {
 }
 
 .quote {
+    align-self: center;
     padding: 0 50px 0 50px;
 }
 
 .quote-author {
     align-self: flex-end;
-    padding: 0 40px;
+    padding: 0 350px;
 }
 
-.signup {
-    padding: 30px 50px;
-}
 .banner {
     background-color: #3882F6;
     color: white;
     display: flex;
-    justify-content: space-around;
+    justify-content: center;
+    gap: 30px;
     padding: 30px 50px;
 }
 
@@ -78,11 +131,12 @@ button {
     color: white;
     border-radius: 10px;
     border: 2px solid white;
+    padding: 6px 20px;
 }
 
-span {
+.call-header {
     font-size: larger;
-    font-weight: bold;
+    font-weight: 600;
 }
 
 .footer {
